data/K8S/platforms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platform-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: platformservice
    template:
        metadata:
            labels:
                app: platformservice
        spec:
            containers:
                - name: platformservice
                  image: ankitsflhub/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: platform-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: platformservice
    ports:
        - name: platformservice
          protocol: TCP
          port: 80
          targetPort: 80
        - name: platformgrpc
          protocol: TCP
          port: 666
          targetPort: 666
