data/K8S/service-mssql-database-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: microservice-mssql-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mssql
    template:
        metadata:
            labels:
                app: mssql
        spec:
            containers:
                -  name: mssql
                   image: mcr.microsoft.com/mssql/server:2017-latest
                   ports:
                     - containerPort: 1433 
                   volumeMounts:
                      - mountPath: /var/opt/mssql/data
                        name: mssqldb
            volumes: 
                -  name: mssqldb
                   persistentVolumeClaim:
                      claimName: microservice-mssql-claim
---
apiVersion: v1
kind: Service
metadata:
    name: microservice-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: mssql
    ports:
        - name: mssql
          protocol: TCP
          port: 1433 
          targetPort: 1433 
---
apiVersion: v1
kind: Service
metadata:
    name: microservice-loadbalancer
spec:
    type: LoadBalancer
    selector:
        app: mssql
    ports:
        - protocol: TCP
          port: 1433
          targetPort: 1433
