data/K8S/ingress-nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-srv
  annotations:
    nginx.ingress.kubernetes.io/use.regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ankit-microservice.com
      http:
        paths:
            - path: /api/Platforms
              pathType: Prefix
              backend:
                service:
                    name: platform-clusterip-srv
                    port:
                        number: 80
            - path: /api/c/Platforms
              pathType: Prefix
              backend:
                service:
                    name: command-clusterip-srv
                    port:
                        number: 80
